-Fixed scrollbar

--- a/skins/cavendish/cavendish.css
+++ b/skins/cavendish/cavendish.css
@@ -165,6 +165,7 @@ body {
     overflow-y: auto;
     overflow-x: hidden;
     max-height: calc(100% - 240px);
+    width: 220px;
 }
 
 #nav hr {
